removed use of deprecated url constructor, converted public fields to private + getters